--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
     <maven-war.version>2.3</maven-war.version>
     <mockito.version>1.9.5</mockito.version>
     <persistence.version>1.0.0</persistence.version>
+    <oaipmh.version>0.0.1</oaipmh.version>
     <postgresql.version>9.0-801.jdbc4</postgresql.version>
     <slf4j.version>1.7.5</slf4j.version>
     <solr.version>4.4.0</solr.version>
@@ -115,5 +116,20 @@
   <prerequisites>
     <maven>2.2.1</maven>
   </prerequisites>
+
+  <distributionManagement>
+    <repository>
+      <id>maven.huygens</id>
+      <name>Huygens Maven Repository</name>
+      <url>scp://hi7dev.huygens.knaw.nl/data/hibuild/public_html/repository</url>
+    </repository>
+    <!-- use the following if you ARE using a snapshot version. -->
+    <snapshotRepository>
+      <id>maven.huygens</id>
+      <name>Huygens Maven Repository</name>
+      <url>scp://hi7dev.huygens.knaw.nl/data/hibuild/public_html/repository</url>
+      <uniqueVersion>false</uniqueVersion>
+    </snapshotRepository>
+  </distributionManagement>
 
 </project>
