--- a/elab4-backend/src/main/resources/version.properties
+++ b/elab4-backend/src/main/resources/version.properties
@@ -1,2 +1,2 @@
-build=testdeploy_20131014172532
-builddate=Mon, Oct 14, 2013  5:25:32 PM
+build=testdeploy_20131015110945
+builddate=Tue, Oct 15, 2013 11:09:45 AM
