rollback on exception thrown

--- a/elab4-backend/src/main/resources/version.properties
+++ b/elab4-backend/src/main/resources/version.properties
@@ -1,2 +1,2 @@
-build=testdeploy_20131015114520
-builddate=Tue, Oct 15, 2013 11:45:20 AM
+build=testdeploy_20131015120339
+builddate=Tue, Oct 15, 2013 12:03:40 PM
