PublicationFinalizer: added persistenceManager

--- a/elab4-publish/pom.xml
+++ b/elab4-publish/pom.xml
@@ -29,10 +29,23 @@
       <version>${freemarker.version}</version>
     </dependency>
     <!-- text dependencies -->
-    <dependency>
+<!--     <dependency>
       <groupId>xmlunit</groupId>
       <artifactId>xmlunit</artifactId>
       <version>${xmlunit.version}</version>
+    </dependency> -->
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>${junit.version}</version>
+      <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>${mockito.version}</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 </project>
