pom versions update

--- a/elab4-publication-backend/pom.xml
+++ b/elab4-publication-backend/pom.xml
@@ -18,7 +18,7 @@
     <dependency>
       <groupId>nl.knaw.huygens.elab4</groupId>
       <artifactId>elab4-solr</artifactId>
-      <version>${parent.version}</version>
+      <version>${project.parent.version}</version>
     </dependency>
 
     <dependency>
