--- a/elab4-solr/pom.xml
+++ b/elab4-solr/pom.xml
@@ -11,7 +11,7 @@
     <dependency>
       <groupId>nl.knaw.huygens.elab4</groupId>
       <artifactId>elab4-common</artifactId>
-      <version>${parent.version}</version>
+      <version>${project.parent.version}</version>
     </dependency>
 
     <dependency>
