--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
     <guice.version>3.0</guice.version>
     <hibernate.version>4.3.0.Beta5</hibernate.version>
     <hsqldb.version>2.3.1</hsqldb.version>
-    <jackson.version>2.2.3</jackson.version>
+    <jackson.version>2.3.0-rc1</jackson.version>
     <javaxservlet-api.version>3.0-alpha-1</javaxservlet-api.version>
     <jaxrstools.version>0.0.5</jaxrstools.version>
     <jersey.version>1.17.1</jersey.version>
