--- a/elab4-backend/src/main/resources/version.properties
+++ b/elab4-backend/src/main/resources/version.properties
@@ -1,2 +1,2 @@
-build=testdeploy_20131105163657
-builddate=Tue, Nov 05, 2013  4:36:58 PM
+build=testdeploy_20131106101343
+builddate=Wed, Nov 06, 2013 10:13:45 AM
