No nulls in config.json

--- a/elab4-backend/src/main/resources/version.properties
+++ b/elab4-backend/src/main/resources/version.properties
@@ -1,2 +1,2 @@
-build=testdeploy_20131106101343
-builddate=Wed, Nov 06, 2013 10:13:45 AM
+build=testdeploy_20131108163238
+builddate=Fri, Nov 08, 2013  4:32:40 PM
