--- a/elab4-backend/src/main/resources/version.properties
+++ b/elab4-backend/src/main/resources/version.properties
@@ -1,2 +1,2 @@
-build=testdeploy_20131111120055
-builddate=Mon, Nov 11, 2013 12:00:56 PM
+build=testdeploy_20131112112117
+builddate=Tue, Nov 12, 2013 11:21:17 AM
