--- a/elab4-backend/src/main/resources/version.properties
+++ b/elab4-backend/src/main/resources/version.properties
@@ -1,2 +1,2 @@
-build=testdeploy_20131112112117
-builddate=Tue, Nov 12, 2013 11:21:17 AM
+build=testdeploy_20131112164713
+builddate=Tue, Nov 12, 2013  4:47:13 PM
