--- a/pom.xml
+++ b/pom.xml
@@ -1,138 +1,142 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>nl.knaw.huygens.elab4</groupId>
-  <artifactId>elab4</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>pom</packaging>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>nl.knaw.huygens.elab4</groupId>
+	<artifactId>elab4</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<packaging>pom</packaging>
 
-  <modules>
-    <module>elab4-backend</module>
-    <module>elab4-publish</module>
-    <module>elab4-publication-backend</module>
-    <module>elab4-tools</module>
-    <module>elab4-solr</module>
-    <module>elab4-common</module>
-  </modules>
+	<modules>
+		<module>elab4-backend</module>
+		<module>elab4-publish</module>
+		<module>elab4-publication-backend</module>
+		<module>elab4-tools</module>
+		<module>elab4-solr</module>
+		<module>elab4-common</module>
+	</modules>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-    <appassembler-maven.version>1.3.1</appassembler-maven.version>
-    <c3p0.version>0.9.1.2</c3p0.version>
-    <classloader-leak-prevention.version>1.8.1</classloader-leak-prevention.version>
-    <commons-configuration.version>1.6</commons-configuration.version>
-    <commons-lang.version>2.6</commons-lang.version>
-    <flexjson.version>3.1</flexjson.version>
-    <freemarker.version>2.3.20</freemarker.version>
-    <guava.version>15.0</guava.version>
-    <guice.version>3.0</guice.version>
-    <hibernate.version>4.3.0.Beta5</hibernate.version>
-    <hsqldb.version>2.3.1</hsqldb.version>
-    <jackson.version>2.3.0-rc1</jackson.version>
-    <javaxservlet-api.version>3.0-alpha-1</javaxservlet-api.version>
-    <jaxrstools.version>0.0.5</jaxrstools.version>
-    <jersey.version>1.17.1</jersey.version>
-    <jsoup.version> 1.7.3</jsoup.version>
-    <jsr250-api.version>1.0</jsr250-api.version>
-    <jtidy.version>r938</jtidy.version>
-    <junit.version>4.11</junit.version>
-    <maven-assembly.version>2.4</maven-assembly.version>
-    <maven-compiler.version>3.1</maven-compiler.version>
-    <maven-war.version>2.3</maven-war.version>
-    <mockito.version>1.9.5</mockito.version>
-    <persistence.version>1.0.6</persistence.version>
-    <oaipmh.version>0.0.1</oaipmh.version>
-    <postgresql.version>9.0-801.jdbc4</postgresql.version>
-    <slf4j.version>1.7.5</slf4j.version>
-    <solr.version>4.4.0</solr.version><!-- 4.5.1 geeft problemen -->
-    <tomcat-maven.version>1.1</tomcat-maven.version>
-    <tomcatservlet-api.version>6.0.36</tomcatservlet-api.version>
-    <urlrewritefilter.version>4.0.4</urlrewritefilter.version>
-    <visitei.version>0.4.5-SNAPSHOT</visitei.version>
-    <xmlunit.version>1.5</xmlunit.version>
-    <yoga.version>1.0.0</yoga.version>
-  </properties>
+		<appassembler-maven.version>1.3.1</appassembler-maven.version>
+		<assertj-guava.version>1.0.0</assertj-guava.version>
+		<assertj-core.version>1.5.0</assertj-core.version>
+		<c3p0.version>0.9.1.2</c3p0.version>
+		<classloader-leak-prevention.version>1.8.1</classloader-leak-prevention.version>
+		<commons-configuration.version>1.6</commons-configuration.version>
+		<commons-lang.version>2.6</commons-lang.version>
+		<flexjson.version>3.1</flexjson.version>
+		<fest.version>1.0.16</fest.version>
+		<freemarker.version>2.3.20</freemarker.version>
+		<guava.version>15.0</guava.version>
+		<guice.version>3.0</guice.version>
+		<hibernate.version>4.3.0.Beta5</hibernate.version>
+		<hsqldb.version>2.3.1</hsqldb.version>
+		<jackson.version>2.3.0-rc1</jackson.version>
+		<javaxservlet-api.version>3.0-alpha-1</javaxservlet-api.version>
+		<jaxrstools.version>0.0.5</jaxrstools.version>
+		<jersey.version>1.17.1</jersey.version>
+		<jsoup.version> 1.7.3</jsoup.version>
+		<jsr250-api.version>1.0</jsr250-api.version>
+		<jtidy.version>r938</jtidy.version>
+		<junit.version>4.11</junit.version>
+		<maven-assembly.version>2.4</maven-assembly.version>
+		<maven-compiler.version>3.1</maven-compiler.version>
+		<maven-war.version>2.3</maven-war.version>
+		<mockito.version>1.9.5</mockito.version>
+		<persistence.version>1.0.6</persistence.version>
+		<oaipmh.version>0.0.1</oaipmh.version>
+		<postgresql.version>9.0-801.jdbc4</postgresql.version>
+		<slf4j.version>1.7.5</slf4j.version>
+		<solr.version>4.4.0</solr.version><!-- 4.5.1 geeft problemen -->
+		<tomcat-maven.version>1.1</tomcat-maven.version>
+		<tomcatservlet-api.version>6.0.36</tomcatservlet-api.version>
+		<urlrewritefilter.version>4.0.4</urlrewritefilter.version>
+		<visitei.version>0.4.5-SNAPSHOT</visitei.version>
+		<xmlunit.version>1.5</xmlunit.version>
+		<yoga.version>1.0.0</yoga.version>
+	</properties>
 
-  <repositories>
-    <repository>
-      <id>Huygens</id>
-      <name>Huygens repository</name>
-      <url>http://maven.huygens.knaw.nl/repository/</url>
-      <releases>
-        <enabled>true</enabled>
-        <updatePolicy>always</updatePolicy>
-        <checksumPolicy>warn</checksumPolicy>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-        <updatePolicy>always</updatePolicy>
-        <checksumPolicy>fail</checksumPolicy>
-      </snapshots>
-    </repository>
-    <repository>
-      <id>central</id>
-      <name>central repository</name>
-      <url>http://repo1.maven.org/maven2</url>
-    </repository>
-  </repositories>
+	<repositories>
+		<repository>
+			<id>Huygens</id>
+			<name>Huygens repository</name>
+			<url>http://maven.huygens.knaw.nl/repository/</url>
+			<releases>
+				<enabled>true</enabled>
+				<updatePolicy>always</updatePolicy>
+				<checksumPolicy>warn</checksumPolicy>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+				<updatePolicy>always</updatePolicy>
+				<checksumPolicy>fail</checksumPolicy>
+			</snapshots>
+		</repository>
+		<repository>
+			<id>central</id>
+			<name>central repository</name>
+			<url>http://repo1.maven.org/maven2</url>
+		</repository>
+	</repositories>
 
-  <build>
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>${maven-compiler.version}</version>
-        <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
-        </configuration>
-      </plugin>
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>${maven-compiler.version}</version>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+			</plugin>
 
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-war-plugin</artifactId>
-        <version>${maven-war.version}</version>
-      </plugin>
-    </plugins>
-  </build>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>${maven-war.version}</version>
+			</plugin>
+		</plugins>
+	</build>
 
-  <scm>
-    <tag>HEAD</tag>
-    <connection>ssh://bramb@hi7.huygens.knaw.nl/data/git/elab4.git</connection>
-    <developerConnection>ssh://bramb@hi7.huygens.knaw.nl/data/git/elab4.git</developerConnection>
-  </scm>
+	<scm>
+		<tag>HEAD</tag>
+		<connection>ssh://bramb@hi7.huygens.knaw.nl/data/git/elab4.git</connection>
+		<developerConnection>ssh://bramb@hi7.huygens.knaw.nl/data/git/elab4.git</developerConnection>
+	</scm>
 
-  <organization>
-    <name>Huygens ING</name>
-    <url>http://www.huygens.knaw.nl/</url>
-  </organization>
+	<organization>
+		<name>Huygens ING</name>
+		<url>http://www.huygens.knaw.nl/</url>
+	</organization>
 
-  <issueManagement>
-    <system>Redmine</system>
-    <url>http://suzanna.huygens.knaw.nl/projects/elaborate-consolidatie</url>
-  </issueManagement>
+	<issueManagement>
+		<system>Redmine</system>
+		<url>http://suzanna.huygens.knaw.nl/projects/elaborate-consolidatie</url>
+	</issueManagement>
 
-  <ciManagement>
-    <system>cruisecontrolrb</system>
-    <url>http://cruisecontrol.huygens.knaw.nl/builds/elab4</url>
-  </ciManagement>
+	<ciManagement>
+		<system>cruisecontrolrb</system>
+		<url>http://cruisecontrol.huygens.knaw.nl/builds/elab4</url>
+	</ciManagement>
 
-  <prerequisites>
-    <maven>2.2.1</maven>
-  </prerequisites>
+	<prerequisites>
+		<maven>2.2.1</maven>
+	</prerequisites>
 
-  <distributionManagement>
-    <repository>
-      <id>maven.huygens</id>
-      <name>Huygens Maven Repository</name>
-      <url>scp://hi7.huygens.knaw.nl/data/htdocs/repository</url>
-    </repository>
-    <!-- use the following if you ARE using a snapshot version. -->
-    <snapshotRepository>
-      <id>maven.huygens</id>
-      <name>Huygens Maven Repository</name>
-      <url>scp://hi7.huygens.knaw.nl/data/htdocs/repository</url>
-      <uniqueVersion>false</uniqueVersion>
-    </snapshotRepository>
-  </distributionManagement>
+	<distributionManagement>
+		<repository>
+			<id>maven.huygens</id>
+			<name>Huygens Maven Repository</name>
+			<url>scp://hi7.huygens.knaw.nl/data/htdocs/repository</url>
+		</repository>
+		<!-- use the following if you ARE using a snapshot version. -->
+		<snapshotRepository>
+			<id>maven.huygens</id>
+			<name>Huygens Maven Repository</name>
+			<url>scp://hi7.huygens.knaw.nl/data/htdocs/repository</url>
+			<uniqueVersion>false</uniqueVersion>
+		</snapshotRepository>
+	</distributionManagement>
 
 </project>
