--- a/elab4-publish/pom.xml
+++ b/elab4-publish/pom.xml
@@ -43,6 +43,12 @@
 			<version>${mockito.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<version>${assertj-core.version}</version>
+			<scope>test</scope>
+		</dependency>
 
 	</dependencies>
 
