--- a/elab4-backend/src/main/resources/version.properties
+++ b/elab4-backend/src/main/resources/version.properties
@@ -1,2 +1,2 @@
-build=testdeploy_20131113120139
-builddate=Wed, Nov 13, 2013 12:01:41 PM
+build=testdeploy_20131114104933
+builddate=Thu, Nov 14, 2013 10:49:35 AM
