--- a/elab4-backend/src/main/resources/version.properties
+++ b/elab4-backend/src/main/resources/version.properties
@@ -1,2 +1,2 @@
-build=testdeploy_20131115105918
-builddate=Fri, Nov 15, 2013 10:59:19 AM
+build=testdeploy_20131119171800
+builddate=Tue, Nov 19, 2013  5:18:00 PM
