jaxrs-tools upgrade

--- a/elab4-backend/src/main/resources/version.properties
+++ b/elab4-backend/src/main/resources/version.properties
@@ -1,2 +1,2 @@
-build=testdeploy_20131120172438
-builddate=Wed, Nov 20, 2013  5:24:39 PM
+build=testdeploy_20131125103758
+builddate=Mon, Nov 25, 2013 10:37:58 AM
