--- a/pom.xml
+++ b/pom.xml
@@ -23,19 +23,19 @@
 		<assertj-core.version>1.5.0</assertj-core.version>
 		<c3p0.version>0.9.1.2</c3p0.version>
 		<classloader-leak-prevention.version>1.8.1</classloader-leak-prevention.version>
-		<commons-configuration.version>1.6</commons-configuration.version>
+		<commons-configuration.version>1.6</commons-configuration.version><!-- because of hadoop-common dependency in solr-core -->
 		<commons-lang.version>2.6</commons-lang.version>
 		<flexjson.version>3.1</flexjson.version>
 		<fest.version>1.0.16</fest.version>
 		<freemarker.version>2.3.20</freemarker.version>
 		<guava.version>15.0</guava.version>
 		<guice.version>3.0</guice.version>
-		<hibernate.version>4.3.0.Beta5</hibernate.version>
+		<hibernate.version>4.3.0.CR1</hibernate.version>
 		<hsqldb.version>2.3.1</hsqldb.version>
-		<jackson.version>2.3.0-rc1</jackson.version>
+		<jackson.version>2.3.0</jackson.version>
 		<javaxservlet-api.version>3.0-alpha-1</javaxservlet-api.version>
 		<jaxrstools.version>0.0.6</jaxrstools.version>
-		<jersey.version>1.17.1</jersey.version>
+		<jersey.version>1.18</jersey.version>
 		<jsoup.version> 1.7.3</jsoup.version>
 		<jsr250-api.version>1.0</jsr250-api.version>
 		<jtidy.version>r938</jtidy.version>
