--- a/elab4-backend/src/main/resources/version.properties
+++ b/elab4-backend/src/main/resources/version.properties
@@ -1,2 +1,2 @@
-build=testdeploy_20131125114006
-builddate=Mon, Nov 25, 2013 11:40:06 AM
+build=testdeploy_20131211164231
+builddate=Wed, Dec 11, 2013  4:42:32 PM
