--- a/elab4-backend/pom.xml
+++ b/elab4-backend/pom.xml
@@ -31,6 +31,11 @@
 			<artifactId>visitei</artifactId>
 			<version>${visitei.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>nl.knaw.huygens</groupId>
+			<artifactId>security-client</artifactId>
+			<version>2.1.2</version>
+		</dependency>
 
 		<dependency>
 			<groupId>com.google.guava</groupId>
@@ -154,7 +159,7 @@
 		<dependency>
 			<groupId>org.apache.pdfbox</groupId>
 			<artifactId>pdfbox</artifactId>
-			<version>1.8.2</version>
+			<version>1.8.3</version>
 		</dependency>
 
 		<!-- runtime dependencies -->
