--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
 		<persistence.version>2.0.0</persistence.version>
 		<oaipmh.version>0.0.1</oaipmh.version>
 		<postgresql.version>9.0-801.jdbc4</postgresql.version>
+		<security.version>2.1.4</security.version>
 		<slf4j.version>1.7.5</slf4j.version>
 		<solr.version>4.4.0</solr.version><!-- 4.5.1 geeft problemen -->
 		<tomcat-maven.version>1.1</tomcat-maven.version>
@@ -73,11 +74,6 @@
 				<updatePolicy>always</updatePolicy>
 				<checksumPolicy>fail</checksumPolicy>
 			</snapshots>
-		</repository>
-		<repository>
-			<id>central</id>
-			<name>central repository</name>
-			<url>http://repo1.maven.org/maven2</url>
 		</repository>
 	</repositories>
 
