finished publication refactoring

--- a/elab4-backend/src/main/resources/publication/WEB-INF/classes/version.properties
+++ b/elab4-backend/src/main/resources/publication/WEB-INF/classes/version.properties
@@ -1,2 +1,2 @@
-build=publication_backend_20131216161030
-builddate=Mon, Dec 16, 2013  4:10:31 PM
+build=publication_backend_20131218115953
+builddate=Wed, Dec 18, 2013 11:59:53 AM
