--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,6 @@
 		<assertj-core.version>1.5.0</assertj-core.version>
 		<c3p0.version>0.9.1.2</c3p0.version>
 		<classloader-leak-prevention.version>1.9.0</classloader-leak-prevention.version>
-		<commons-configuration.version>1.10</commons-configuration.version><!-- because of hadoop-common dependency in solr-core -->
 		<commons-lang.version>2.6</commons-lang.version>
 		<flexjson.version>3.1</flexjson.version>
 		<fest.version>1.0.16</fest.version>
@@ -50,13 +49,15 @@
 		<postgresql.version>9.0-801.jdbc4</postgresql.version>
 		<security.version>2.1.4</security.version>
 		<slf4j.version>1.7.5</slf4j.version>
-		<solr.version>4.6.0</solr.version><!-- 4.5.1 geeft problemen -->
 		<tomcat-maven.version>1.1</tomcat-maven.version>
 		<tomcatservlet-api.version>6.0.36</tomcatservlet-api.version>
 		<urlrewritefilter.version>4.0.4</urlrewritefilter.version>
 		<visitei.version>0.4.5-SNAPSHOT</visitei.version>
 		<xmlunit.version>1.5</xmlunit.version>
 		<yoga.version>1.0.0</yoga.version>
+
+		<solr.version>4.4.0</solr.version><!-- > 4.4.0 geeft problemen -->
+		<commons-configuration.version>1.6</commons-configuration.version><!-- because of hadoop-common dependency in solr-core -->
 	</properties>
 
 	<repositories>
