--- a/elab4-backend/src/main/resources/version.properties
+++ b/elab4-backend/src/main/resources/version.properties
@@ -1,2 +1,2 @@
-build=testdeploy_20131218161701
-builddate=Wed, Dec 18, 2013  4:17:01 PM
+build=testdeploy_20131219102903
+builddate=Thu, Dec 19, 2013 10:29:04 AM
