--- a/elab4-backend-client/pom.xml
+++ b/elab4-backend-client/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>nl.knaw.huygens.elab4</groupId>
 		<artifactId>elab4</artifactId>
-		<version>4.0-SNAPSHOT</version>
+		<version>${elab4.version}</version>
 	</parent>
 	<artifactId>elab4-backend-client</artifactId>
 	<inceptionYear>2013</inceptionYear>
@@ -26,7 +26,7 @@
 			<artifactId>jersey-media-json-jackson</artifactId>
 			<version>2.4.1</version>
 		</dependency>
-		
+
 		<!-- test dependencies -->
 		<dependency>
 			<groupId>junit</groupId>
