--- a/elab4-backend/.settings/org.hibernate.eclipse.console.prefs
+++ b/elab4-backend/.settings/org.hibernate.eclipse.console.prefs
@@ -1,3 +1,3 @@
-default.configuration=
+default.configuration=elab4-backend-configuration-local
 eclipse.preferences.version=1
 hibernate3.enabled=true
