--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>nl.knaw.huygens.elab4</groupId>
 	<artifactId>elab4</artifactId>
-	<version>${elab4.version}</version>
+	<version>4.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<inceptionYear>2011</inceptionYear>
 
@@ -21,17 +21,14 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
 		<elab4.version>4.0-SNAPSHOT</elab4.version>
-		<elab4.config.version>4.0</elab4.config.version>
-		<appassembler-maven.version>1.3.1</appassembler-maven.version>
-		<assertj-guava.version>1.0.0</assertj-guava.version>
-		<assertj-core.version>1.5.0</assertj-core.version>
+		<elab4-config.version>1.0</elab4-config.version>
+
 		<c3p0.version>0.9.1.2</c3p0.version>
-		<classloader-leak-prevention.version>1.9.0</classloader-leak-prevention.version>
 		<commons-lang.version>2.6</commons-lang.version>
 		<flexjson.version>3.1</flexjson.version>
 		<fest.version>1.0.16</fest.version>
 		<freemarker.version>2.3.20</freemarker.version>
-		<guava.version>15.0</guava.version>
+		<guava.version>16.0</guava.version>
 		<guice.version>3.0</guice.version>
 		<hibernate.version>4.3.0.Final</hibernate.version>
 		<hsqldb.version>2.3.1</hsqldb.version>
@@ -39,29 +36,33 @@
 		<javaxservlet-api.version>3.0-alpha-1</javaxservlet-api.version>
 		<jaxrstools.version>0.0.6</jaxrstools.version>
 		<jersey.version>1.18</jersey.version>
-		<jsoup.version> 1.7.3</jsoup.version>
+		<jsoup.version>1.7.3</jsoup.version>
 		<jsr250-api.version>1.0</jsr250-api.version>
 		<jtidy.version>r938</jtidy.version>
-		<junit.version>4.11</junit.version>
-		<maven-assembly.version>2.4</maven-assembly.version>
-		<maven-compiler.version>3.1</maven-compiler.version>
-		<maven-war.version>2.3</maven-war.version>
-		<maven-license.version>1.6</maven-license.version>
-		<mockito.version>1.9.5</mockito.version>
-		<persistence.version>2.0.1</persistence.version>
-		<oaipmh.version>0.0.2</oaipmh.version>
 		<postgresql.version>9.0-801.jdbc4</postgresql.version>
 		<security.version>2.1.4</security.version>
 		<slf4j.version>1.7.5</slf4j.version>
-		<tomcat-maven.version>1.1</tomcat-maven.version>
 		<tomcatservlet-api.version>6.0.36</tomcatservlet-api.version>
 		<urlrewritefilter.version>4.0.4</urlrewritefilter.version>
 		<visitei.version>0.4.5-SNAPSHOT</visitei.version>
 		<xmlunit.version>1.5</xmlunit.version>
 		<yoga.version>1.0.0</yoga.version>
-
 		<solr.version>4.4.0</solr.version><!-- > 4.4.0 geeft problemen -->
 		<commons-configuration.version>1.6</commons-configuration.version><!-- because of hadoop-common dependency in solr-core -->
+
+		<junit.version>4.11</junit.version>
+		<mockito.version>1.9.5</mockito.version>
+		<assertj-guava.version>1.0.0</assertj-guava.version>
+		<assertj-core.version>1.5.0</assertj-core.version>
+
+		<classloader-leak-prevention.version>1.9.0</classloader-leak-prevention.version>
+
+		<appassembler-maven.version>1.3.1</appassembler-maven.version>
+		<maven-assembly.version>2.4</maven-assembly.version>
+		<maven-compiler.version>3.1</maven-compiler.version>
+		<maven-war.version>2.3</maven-war.version>
+		<maven-license.version>1.6</maven-license.version>
+		<tomcat-maven.version>1.1</tomcat-maven.version>
 	</properties>
 
 	<repositories>
