--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
 		<jtidy.version>r938</jtidy.version>
 		<postgresql.version>9.0-801.jdbc4</postgresql.version>
 		<security.version>2.1.4</security.version>
+		<servlet-api.version>3.1.0</servlet-api.version>
 		<slf4j.version>1.7.5</slf4j.version>
 		<tomcatservlet-api.version>6.0.36</tomcatservlet-api.version>
 		<urlrewritefilter.version>4.0.4</urlrewritefilter.version>
