cleanup SolrQuery constructor

--- a/elab4-backend/src/main/resources/publication/WEB-INF/classes/version.properties
+++ b/elab4-backend/src/main/resources/publication/WEB-INF/classes/version.properties
@@ -1,2 +1,2 @@
-build=publication_backend_20140225114810
-builddate=Tue, Feb 25, 2014 11:48:11 AM
+build=publication_backend_20140225121703
+builddate=Tue, Feb 25, 2014 12:17:03 PM
