Create project with (at least) title

--- a/elab4-backend/src/main/resources/version.properties
+++ b/elab4-backend/src/main/resources/version.properties
@@ -1,2 +1,2 @@
-build=testdeploy_20140225110049
-builddate=Tue, Feb 25, 2014 11:00:49 AM
+build=testdeploy_20140225131138
+builddate=Tue, Feb 25, 2014  1:13:29 PM
