commit after deleteById

--- a/elab4-backend/src/main/resources/version.properties
+++ b/elab4-backend/src/main/resources/version.properties
@@ -1,2 +1,2 @@
-build=testdeploy_20140225131138
-builddate=Tue, Feb 25, 2014  1:13:29 PM
+build=testdeploy_2014.02.25.14.03.21
+builddate=Tue, Feb 25, 2014  2:05:25 PM
